samples/_failures_safe/1761495001_dbb727_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a609cf9f.c: In function ‘main’:
./samples/SAFE/__tmp_a609cf9f.c:141:9: error: expected identifier at end of input
  141 |         printf("%s [%s] %s\n", entries[i].timestamp, entries[i].
      |         ^~~~~~
./samples/SAFE/__tmp_a609cf9f.c:141:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a609cf9f.c:141:9: error: expected declaration or statement at end of input
